# PSAT

./: .dockerignore  .env.example  .gitignore  BigPictureSpec.md  CLAUDE.md  Dockerfile  README.md  addresses.json  alembic.ini  api.py  docker-compose.yml  fly.toml  generic-predicate-pipeline-v1.md  generic-predicate-pipeline-v2.md  generic-predicate-pipeline-v3.md  generic-predicate-pipeline-v4.md  generic-predicate-pipeline-v5.md  generic-predicate-pipeline-v6.md  generic-predicate-pipeline-v7.md  info-dont-add-to-git.txt  main.py  multichain-todo.txt  pencil-new.pen  pyproject.toml  start_browser.sh  start_container.sh  start_local.sh  start_monitor.sh  start_web.sh  start_workers.sh  start_workers_heavy.sh  start_workers_light.sh  todo-no-commit-to-gihub.txt  web_demo.py
PSAT_Frontend/: Dockerfile  docker-compose.yml  index.pen  package-lock.json  package.json
alembic/: env.py  script.py.mako
bench_configs/: etherfi_lp.json  etherfi_lp_cascade.json  etherfi_lp_optimized.json  etherfi_lp_split.json  static_worker_matrix.json  usdc_burst.json  usdc_impl.json  weth_smoke.json
bench_results/: REPORT.md  comparison.json  summary.json
bench_results_addresses/: comparison.json  summary.json
bench_results_full/: FINAL_REPORT.md  comparison.json  etherfi_deps_twopass.json  etherfi_research_with_deps.json  summary.json
cache/: solidity-files-cache.json
config/: known_docs.yaml
crytic-export/: combined_solc.json
data/: layerzero_eids.json
db/: __init__.py  contract_materializations.py  db_manager.py  export_db.py  import_db.py  mapping_enumeration_cache.py  models.py  nested_artifacts.py  queue.py  storage.py
docker/: dapp-crawler.Dockerfile  site.Dockerfile
docs/: control-tracking-runtime-plan.md  deploy.md  docker-backend.md  hypersync-policy-backfill.md  multichain-bridge-pipeline.md  predicate-pipeline-v2-cleanup.md  site-demo.md
examples/: README.md  etherfi_contract_inventory.json
routers/: __init__.py  address_labels.py  agent.py  analyses.py  audits.py  company.py  deps.py  jobs.py  meta.py  monitored.py  predicate_capabilities.py  protocols.py  spa.py  v2.py  watched_proxies.py
schemas/: __init__.py  api_requests.py  contract_analysis.py  control_tracking.py  effective_permissions.py  hypersync_backfill.py  principal_labels.py  resolved_control_graph.py  stage_errors.py  upgrade_history.py
scripts/: backfill_contract_materializations_to_blob.py  backfill_upgrade_events.py  bench_ai_addresses.py  bench_ai_combos.py  bench_ai_compare.py  bench_ai_compare_addresses.py  bench_ai_compare_full.py  bench_ai_search.py  bench_ai_search_full.py  bench_mapping_enumerator.py  bench_matrix.py  bench_predicate_pipeline.py  bench_sequence.py  bench_workers.py  cutover_dry_run.py  demo_governance_events.sh  demo_proxy_upgrade.sh  explore_hevm_opaque_external_guard.py  explore_hevm_opaque_external_policy_guard.py  explore_hevm_opaque_external_role_guard.py  ingest_scope_addresses.py  measure_reprocess_cost.py  new_migration.sh  refresh_layerzero_eids.mjs  sandbox_etherfi_admin_e2e.py  seed_findings.py  verify_ether_fi_coverage.py
services/: analyzer.py  call_graph.py  classifier.py  contract_analysis.py  contract_discovery.py  contract_discovery_ai.py  contract_inventory_ai.py  control_tracker.py  demo_runner.py  dependent_contracts.py  discovery_ai_domain.py  discovery_ai_evidence.py  discovery_ai_inventory.py  discovery_deployer.py  dynamic_dependencies.py  effective_permissions.py  fetcher.py  hypersync_backfill.py  llm_analyzer.py  llm_big_picture.py  pausability_analysis.py  principal_enrichment.py  privilege_analysis.py  recursive_resolution.py  timelock_analysis.py
site/: index.html  package-lock.json  package.json  (+4 more)
(+1150 files in other folders)
