[project]
name = "psat"
version = "0.1.0"
description = "Protocol Security Assessment Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "eth-utils>=5.3.0",
  "fastapi>=0.135.1",
  "hypersync>=0.8.5",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "slither-analyzer>=0.11.0",
  "uvicorn>=0.42.0",
  "websockets>=15.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pyright>=1.1.0",
  "ruff>=0.9.0",
  "httpx>=0.28.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
