[project]
name = "psat"
version = "0.1.0"
description = "Protocol Security Assessment Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13",
  "eth-utils>=5.3.0",
  "fastapi>=0.135.1",
  "hypersync>=0.8.5",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "slither-analyzer>=0.11.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.42.0",
  "websockets>=15.0.1",
]

[project.optional-dependencies]
dapp-crawler = [
  "playwright>=1.40.0",
  "eth-account>=0.11.0",
  "eth-abi>=5.0.0",
  "web3>=6.15.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pyright>=1.1.0",
  "ruff>=0.9.0",
  "httpx>=0.28.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"services/crawlers/dapp/browser.py" = ["E501"]

[tool.coverage.run]
source = ["api", "workers", "services", "db", "utils"]

[tool.coverage.report]
fail_under = 70
skip_empty = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
