[project]
name = "psat"
version = "0.1.0"
description = "Protocol Security Assessment Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13",
  "boto3>=1.34",
  "eth-utils>=5.3.0",
  "fastapi>=0.135.1",
  "hypersync>=0.8.5",
  "playwright>=1.58.0",
  "psycopg2-binary>=2.9",
  "pypdf>=5.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "slither-analyzer>=0.11.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.42.0",
  "websockets>=15.0.1",
]

[project.optional-dependencies]
dapp-crawler = [
  "playwright>=1.40.0",
  "eth-account>=0.11.0",
  "eth-abi>=5.0.0",
  "web3>=6.15.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pyright>=1.1.0",
  "ruff>=0.9.0",
  "httpx>=0.28.1",
  "pytest-cov>=7.1.0",
  "responses>=0.25.0",
  "coverage>=7.6.0",
  "diff-cover>=10.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that require a running API server and workers (deselected by default)",
    "smoke: read-only live tests safe to run against prod post-deploy (subset of `live`)",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"services/crawlers/dapp/browser.py" = ["E501"]
"tests/test_effect_label_adversarial.py" = ["E501"]
"tests/test_symbolic_effects.py" = ["E501"]
"tests/*" = ["F811"]
# Alembic autogenerates one-column-per-line table definitions; line length
# isn't worth fighting with the generator.
"alembic/versions/*.py" = ["E501"]

[tool.coverage.run]
source = ["api", "workers", "services", "db", "utils"]

[tool.coverage.report]
fail_under = 70
skip_empty = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
